fixed the build information so that we now include the kunststoff files.

modified the toolbars and the images some.

added an easier interface for adding new folders.

fixed a bug where multipart/alternative messages with additional attachments
weren't getting parsed properly.

added a way to view emails either with full headers or as raw rfc822
streams.

added (limited) online help.

fixed a NPE that could happen if you tried to delete a message that was in
the process of getting deleted.

020918 release
--------------

removed a lot of unused image files.  this should make the download at least
a bit smaller.

fixed the AddressBookEditor so that newly created AddressBooks are 
editable.  you still have to hit 'apply' first to create the address book,
though.

made it so the outbox and sent folder are both properly configured when
you start up the first time.  otherwise, though, they still require a 
restart for changes to be made.  this fix only applies to the first time
you start.

added a default domain setting, so that if you enter in an email address 
without a domain, then the default domain is appended.  if no default domain
is set, then the domain of the user is appended.

fixed an error where incomplete matches to address book entries would return
as if they were complete matches.

fixed an error with subscribing to deeply nested subfolders.

made it so the address entry windows actually show up in desktop mode.

bringing up folders in disconnected mode shows the correct number of
read and unread messages again.

fixed the display of the folders in the folder tree.

made it so new external frames don't end up all going at 0,0.

fixed a possible NPE in the MessageProxy if a message has an incorrectly
formatted header.

fixed a bug where an address without a personal name couldn't be added to
the address book.

added a button for actually using the address list to pull in addresses
to the to:, cc:, and bcc: fields.
