@@ -189,6 +189,12 @@ MessageProxy.popupMenu.Forward.Label=Forward
 MessageProxy.popupMenu.Delete.Label=Delete
 
 MessageProxy.cachingPopupMenu.Open.Label=Open Message
+MessageProxy.cachingPopupMenu.OpenMulti.Label=Open...
+MessageProxy.cachingPopupMenu.OpenMulti.Text.Label=As Text
+MessageProxy.cachingPopupMenu.OpenMulti.Html.Label=As HTML
+MessageProxy.cachingPopupMenu.OpenMulti.Default.Label=With Default Headers
+MessageProxy.cachingPopupMenu.OpenMulti.Full.Label=With Full Headers
+MessageProxy.cachingPopupMenu.OpenMulti.Raw.Label=Raw Mode
 MessageProxy.cachingPopupMenu.Move.Label=Move Message
 MessageProxy.cachingPopupMenu.Copy.Label=Copy Message
 MessageProxy.cachingPopupMenu.Reply.Label=Reply
