@@ -1,5 +1,4 @@
-*) finish support for switching display style and headers.  
-  -- make the buttons have reasonable images
+*) icons:  need new message in inbox for atg 
 
 *) fix synch w/subscribed folders and INBOX problem.
 
@@ -19,7 +18,7 @@
 *) fix protocol timeout for imap/ssl? -- update this todo with more
 	specifics.  -- i think it's that if we lose our connection but 
 	don't notice, then we try to restore the connection and wait a 
-	long long time.
+	long long time. -- test.
 
 *) add documentation and online help.
   -- general info, plus more detailed configuration information.
